<resources>
    <string name="app_name">AnExplorer</string>
    <string name="app_ver">Another Explorer v1.7</string>
    <string name="app_company">Developed By DWorkS</string>
    <string name="app_url">http://www.dworks.in</string>
    <string name="app_about_info">To make a small difference.</string>
    <string name="app_contrib">Contributions by Hari Krishna Dulipudi, Neehar Doppalapudi</string>
    <string name="app_about">This file explorer helps you  organise your files, save app, monitor process, hide folders and many more</string>
    <string name="twitter"><a href="https://twitter.com/1HaKr">  Twitter</a></string>
    <string name="gplus"><a href="https://plus.google.com/109240246596102887385">  Google+</a></string>
    <string name="searchHint">Search</string>
    <string name="searchGobal">Search SD Card</string>
    <string name="menu_create">New</string>
    <string name="menu_select">Select</string>
    <string name="menu_search">Search</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_compress">Compress</string>
    <string name="menu_save">Save App</string>
    <string name="menu_uninstall">Uninstall App</string>
    <string name="menu_select_mode">Select Mode</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_unselect_all">Unselect All</string>
    <string name="menu_select_unselect">Select / Unselect all</string>
    <string name="menu_help">Help</string>
    <string name="menu_clear_cache">Clear Cache</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_done">Done</string>
    <string name="menu_reset">Reset</string>
    <string name="name_phone">Phone</string>
    <string name="name_tablet">Tablet</string>
    <string name="name_sdcard">SD Card</string>
    <string name="name_apps">Apps</string>
    <string name="name_processes">Processes</string>
    <string name="name_download">Downloads</string>
    <string name="name_bluetooth">Bluetooth</string>
    <string name="name_music">Music</string>
    <string name="name_gallery">Gallery</string>
    <string name="name_explorer">Explorer</string>
    <string name="name_system">System</string>
    <string name="name_media">Ringtones</string>
    <string name="name_movies">Movies</string>
    <string name="name_emmc">eMMC</string>
    <string name="name_unscannable">Hidden Folders</string>
    <string name="name_wallpaper">Wallpapers</string>
    <string name="constant_search">Search</string>
    <string name="constant_about">About</string>
    <string name="constant_setting">Setting</string>
    <string name="constant_rename">Rename</string>
    <string name="constant_copy">Copy</string>
    <string name="constant_delete">Delete</string>
    <string name="constant_paste">Paste</string>
    <string name="constant_cut">Cut</string>
    <string name="constant_extract">Extract</string>
    <string name="constant_details">Details</string>
    <string name="constant_open_file">Open File Location</string>
    <string name="constant_app_details">App details</string>
    <string name="constant_open_app">Open App</string>
    <string name="constant_market">Market Link</string>
    <string name="constant_stop_process">Stop process</string>
    <string name="constant_github">Github</string>
    <string name="constant_gplus">Google+</string>
    <string name="constant_twitter">Twitter</string>
    <string name="constant_feedback">Feedback</string>
    <string name="constant_rate">Rate app</string>
    <string name="constant_support">Support</string>
    <string name="constant_continue">Continue</string>
    <string name="hide_folder">Hide from Gallery</string>
    <string name="unhide_folder">Unhide from Gallery</string>
    <string name="folder_option">Folder options</string>
    <string name="app_option">App options</string>
    <string name="hide_option">Hide options</string>
    <string name="msg_loading">Loading\u2026</string>
    <string name="msg_searching">Searching\u2026</string>
    <string name="msg_file_not_found">No matching files found</string>
    <string name="msg_file_not_selected">No file selected</string>
    <string name="msg_file_not_copied">No file copied</string>
    <string name="msg_cant_select">Can\'t Select More than 1 file</string>
    <string name="msg_cant_rename">Can\'t Rename More than 1 file</string>
    <string name="msg_cant_extract">Can\'t Extract More than 1 file</string>
    <string name="msg_cant_extract_other">Can\'t Extract other than \'zip\' file</string>
    <string name="msg_cant_extract_zip">Can\'t Extract \'zip\' file</string>
    <string name="msg_cant_compress_zip">Can\'t Compress into \'zip\' file</string>
    <string name="msg_cant_copy">Can\'t copy to the same folder</string>
    <string name="msg_cant_open">Can\'t open file</string>
    <string name="msg_files_copied">Files copied</string>
    <string name="msg_files_cut">Files cut</string>
    <string name="msg_search_results">Search Results</string>
    <string name="msg_folder_empty">Folder is empty</string>
    <string name="msg_sdcard_unmounted">SD Card is not mounted</string>
    <string name="msg_folder_not_present">Folder is not present</string>
    <string name="msg_share">Share using \u2026</string>
    <string name="msg_unmounted">Unmounted</string>
    <string name="msg_compress">Compress</string>
    <string name="msg_uncompress">Uncompress</string>
    <string name="msg_select">Select</string>
    <string name="msg_selected">selected</string>
    <string name="msg_new">New</string>
    <string name="msg_properties">Properties</string>
    <string name="msg_installed">Installed Apps</string>
    <string name="msg_running">Running Apps</string>
    <string name="msg_create_file">Create File</string>
    <string name="msg_create_folder">Create Folder</string>
    <string name="msg_rename_folder">Rename Folder</string>
    <string name="msg_want_delete">Are you sure you want to Delete?</string>
    <string name="msg_want_exit">Do you want to exit the app?</string>
    <string name="msg_want_adfree">Want to support  AnExplorer? Buy the ad free version available in Android Market</string>
    <string name="msg_adfree">Support AnExplorer!</string>
    <string name="msg_dont_show">Don \'t show again</string>
    <string name="msg_login">Login</string>
    <string name="msg_wrong_password">wrong password</string>
    <string name="msg_pwd_empty">Password cannot be empty</string>
    <string name="msg_creating_dir">Creating directory</string>
    <string name="msg_creating_file">Creating File</string>
    <string name="msg_renaming_file">Renaming selected file\u2026</string>
    <string name="msg_deleting_file">Deleting Selected files\u2026</string>
    <string name="msg_moving_file">Moving selected files\u2026</string>
    <string name="msg_pasting_file">Pasting selected files\u2026</string>
    <string name="msg_compressing_file">Compressing selected files\u2026</string>
    <string name="msg_uncompressing_file">Uncompress selected files\u2026</string>
    <string name="msg_saving_file">Saving Selected Apps\u2026</string>
    <string name="msg_stopping_apps">Stopping Selected apps \u2026</string>
    <string name="msg_gallery_hide">Hiding Selected folders \u2026</string>
    <string name="msg_gallery_unhide">Unhiding Selected folders \u2026</string>
    <string name="msg_clearing_cache">Clearing Apps Cache \u2026</string>
    <string name="msg_setting_wallpaper">Setting Wallpaper \u2026</string>
    <string name="constant_name">Name</string>
    <string name="constant_path">Path</string>
    <string name="constant_type">Type</string>
    <string name="constant_size">Size</string>
    <string name="constant_total">Total files</string>
    <string name="constant_permission">Permission</string>
    <string name="display">Appearance</string>
    <string name="preview">Preview</string>
    <string name="themes">Themes</string>
    <string name="views">Views</string>
    <string name="splash">Splash screen</string>
    <string name="sorting_type">Sorting Type</string>
    <string name="sorting_order">Sorting Order</string>
    <string name="others">Others</string>
    <string name="advanced">For advanced Users ONLY</string>
    <string name="themes_to_display">Theme</string>
    <string name="view_to_display">View</string>
    <string name="show_storage">Storage Mode</string>
    <string name="show_sizes">Folder sizes</string>
    <string name="show_hidden">Hidden Folders</string>
    <string name="show_thumb">Thumb scroll</string>
    <string name="show_pane">Dual Pane</string>
    <string name="show_image">Image preview</string>
    <string name="show_video">Video preview</string>
    <string name="show_mp3">MP3 preview</string>
    <string name="show_apk">APK preview</string>
    <string name="sorting">Sorting</string>
    <string name="choose_theme">Choose desired theme</string>
    <string name="choose_view">Choose desired view</string>
    <string name="display_memory">Displays memory bar for each folder</string>
    <string name="display_space">Displays space occupied by each folder</string>
    <string name="display_hidden">Displays files / folders starting with (.)</string>
    <string name="display_thumb">Displays thumb scroll in the list</string>
    <string name="display_pane">Display navigation pane</string>
    <string name="display_image">Displays preview for images</string>
    <string name="display_video">Displays preview for videos</string>
    <string name="display_mp3">Displays album art for MP3</string>
    <string name="display_apk">Displays icon for APK\'s</string>
    <string name="choose_type">Choose sorting type</string>
    <string name="choose_order">Choose sorting order</string>
    <string name="dont_show_splash">Don\'t show splash screen</string>
    <string name="visit_site">Visit developer\'s site</string>
    <string name="site_dworks">D WorkS</string>
    <string name="ads">Ad Type</string>
    <string name="show_ads">Advertisement</string>
    <string name="root_title">Access Root</string>
    <string name="root_desc">Give root access to the app</string>
    <string name="mount_title">Mount writable</string>
    <string name="mount_desc">Mount phone file system as writable</string>
    <string name="lang">Language</string>
    <string name="auto_login">Auto Login</string>
    <string name="auto_login_desc">Automatically login</string>
    <string name="login_pwd">Login Password</string>
    <string name="login_pwd_retype">Retype Login Password</string>
    <string name="login_pwd_desc">Password for login</string>
    <string name="change">change</string>
    <string name="display_wallpaper">Enables Wallpaper changing</string>
    <string name="enable_wallpaper">Enable wallpaper</string>
    <string name="wallpaper_freq">Wallpaper frequency</string>
    <string name="msg_dir_create_success">Directory was created successfully</string>
    <string name="msg_dir_create_unsuccess">Something wrong with creating directory</string>
    <string name="msg_file_create_success">File was created successfully</string>
    <string name="msg_file_create_unsuccess">Something wrong with creating file</string>
    <string name="msg_file_rename_success">File was renamed successfully</string>
    <string name="help_internal">Browse Internal memory</string>
    <string name="help_sdcard">Browse SD Card</string>
    <string name="help_apps">Manage apps</string>
    <string name="help_process">Monitor processes</string>
    <string name="help_folder">Hide Folders</string>
    <string name="help_shortcut">Shortcuts</string>
</resources>