<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="ImagePreviewPref"
        android:summary="@string/display_image"
        android:title="@string/show_image" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="VideoPreviewPref"
        android:summary="@string/display_video"
        android:title="@string/show_video" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="AudioPreviewPref"
        android:summary="@string/display_mp3"
        android:title="@string/show_mp3" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="ApkPreviewPref"
        android:summary="@string/display_apk"
        android:title="@string/show_apk" />

</PreferenceScreen>