<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        style="@style/MyPreference"
        android:defaultValue="0"
        android:dialogTitle="@string/lang"
        android:entries="@array/lang_options"
        android:entryValues="@array/option_value"
        android:key="LangPref"
        android:title="@string/lang" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="SplashScreenPref"
        android:summary="@string/dont_show_splash"
        android:title="@string/splash" />

    <PreferenceScreen
        android:summary="@string/visit_site"
        android:title="@string/site_dworks" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/app_url" />
    </PreferenceScreen>

</PreferenceScreen>