<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:support="http://schemas.android.com/apk/res-auto" >

    <!-- App Menu Options -->
    <item
        android:id="@+id/menu_select_unselect"
        android:icon="@drawable/ic_menu_mark"
        support:showAsAction="always"
        android:title="@string/menu_select_unselect"/>
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_save"
        support:showAsAction="always"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_clear_cache"
        android:icon="@drawable/ic_menu_cache"
        support:showAsAction="always"
        android:enabled="false"
        android:title="@string/menu_clear_cache" android:visible="false"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search"
        support:showAsAction="always"
        android:title="@string/menu_search"/>    
    <item
        android:id="@+id/menu_uninstall"
        android:icon="@drawable/ic_menu_delete"
        support:showAsAction="always"
        android:title="@string/menu_uninstall"/>

</menu>