<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto" >
    <!-- Edit Menu Options -->    

    <item
        android:id="@+id/menu_copy"
        android:icon="@drawable/ic_menu_copy"
        support:showAsAction="ifRoom"
        android:title="@string/menu_copy"/>
    
    <item
        android:id="@+id/menu_cut"
        android:icon="@drawable/ic_menu_cut"
        support:showAsAction="ifRoom"
        android:title="@string/menu_cut"/>
    
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_menu_delete"
        support:showAsAction="ifRoom"
        android:title="@string/menu_delete"/>
        
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_share"
        support:showAsAction="ifRoom"
        android:title="@string/menu_share" />
    <!-- android:actionProviderClass="android.widget.ShareActionProvider" -->
    
    <item
        android:id="@+id/menu_compress"
        android:icon="@drawable/ic_menu_compress_new"
        support:showAsAction="ifRoom"
        android:title="@string/menu_compress"/>    
   
</menu>