<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >
    <header
        android:fragment="dev.dworks.apps.anexplorer.Setting$SettingFragment"
        android:icon="@drawable/ic_settings_display"
        android:title="@string/display" >
        <extra
            android:name="type"
            android:value="0" />
        <extra
            android:name="title"
            android:value="@string/display" />
    </header>
    <header
        android:fragment="dev.dworks.apps.anexplorer.Setting$SettingFragment"
        android:icon="@drawable/ic_settings_preview"
        android:title="@string/preview" >
        <extra
            android:name="type"
            android:value="1" />
        <extra
            android:name="title"
            android:value="@string/preview" />
    </header>
    <header
        android:fragment="dev.dworks.apps.anexplorer.Setting$SettingFragment"
        android:icon="@drawable/ic_settings_sort"
        android:title="@string/sorting" >
        <extra
            android:name="type"
            android:value="2" />
        <extra
            android:name="title"
            android:value="@string/sorting" />
    </header>
    <header
        android:fragment="dev.dworks.apps.anexplorer.Setting$SettingFragment"
        android:icon="@drawable/ic_menu_set"
        android:title="@string/name_wallpaper" >
        <extra
            android:name="type"
            android:value="3" />
        <extra
            android:name="title"
            android:value="@string/name_wallpaper" />
    </header>
    <header
        android:fragment="dev.dworks.apps.anexplorer.Setting$SettingFragment"
        android:icon="@drawable/ic_menu_login"
        android:title="@string/msg_login" >
        <extra
            android:name="type"
            android:value="4" />
        <extra
            android:name="title"
            android:value="@string/msg_login" />
    </header>    
    <header
        android:fragment="dev.dworks.apps.anexplorer.Setting$SettingFragment"
        android:icon="@drawable/ic_settings_advanced"
        android:title="@string/advanced" >
        <extra
            android:name="type"
            android:value="5" />
        <extra
            android:name="title"
            android:value="@string/advanced" />
    </header>
    <header
        android:fragment="dev.dworks.apps.anexplorer.Setting$SettingFragment"
        android:icon="@drawable/ic_settings_others"
        android:title="@string/others" >
        <extra
            android:name="type"
            android:value="6" />
        <extra
            android:name="title"
            android:value="@string/others" />
    </header>

</preference-headers>