<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/arrow"
            android:gravity="center_vertical"
            android:text="@string/help_internal"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/arrow"
            android:gravity="center_vertical"
            android:text="@string/help_sdcard"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/arrow"
            android:gravity="center_vertical"
            android:text="@string/help_apps"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/arrow"
            android:gravity="center_vertical"
            android:text="@string/help_process"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/arrow"
            android:gravity="center_vertical"
            android:text="@string/help_folder"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="450dp"
        android:text="@string/help_shortcut"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

</RelativeLayout>